<package>
  <name>spacenav</name>
  <version>0.1.0</version>
  <description>This package contains the components of the spacenav</description>
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>LGPL_v3</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Dennis Leroy Wigand</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen</run_depend>

  <export>
    <rtt_plugin_depend>rtt_geometry_msgs</rtt_plugin_depend>
  </export>
</package>
